--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest tests"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@types/jest": "^28.1.8",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "vite": "^3.0.7"
   },
   "dependencies": {
